--- a/public/500.html
+++ b/public/500.html
@@ -2,25 +2,20 @@
 <html>
 <head>
   <title>We're sorry, but something went wrong (500)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-  </style>
+  <link rel="stylesheet" href="500.css" />
+  <meta charset="UTF-8" />
 </head>
 
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
+    <h1>YouVersion</h1>
+    <h2>The Bible App</h2>
+    <p><strong>We're sorry, but something has gone horribly, horribly, wrong.</strong> Good news, though, it’s not your fault.</p>
+    <p>We've been notified about this issue and we'll fix it ASAP. In fact, we’ve probably fixed it in the time it’s taken for you to read this, so go ahead and try the page you originally wanted. Or, go to the <a href="/">home page.</a></p>
   </div>
+
+<script type="text/javascript" src="//use.typekit.net/mgk8ovf.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </body>
 </html>
