Updated 500 page with Adam's copy.

--- a/public/500.html
+++ b/public/500.html
@@ -11,8 +11,7 @@
   <div class="dialog">
     <h1>YouVersion</h1>
     <h2>The Bible App</h2>
-    <p><strong>We're sorry, but something has gone horribly, horribly, wrong.</strong> Good news, though, it’s not your fault.</p>
-    <p>We've been notified about this issue and we'll fix it ASAP. In fact, we’ve probably fixed it in the time it’s taken for you to read this, so go ahead and try the page you originally wanted. Or, go to the <a href="/">home page.</a></p>
+    <p>Oops, something went wrong on our end. Sorry about that! We've been alerted and will address any persistent issues as quickly as possible. Please try to reload the page again or visit our homepage at <a href="/" title="Go to the YouVersion home page">bible.com</a>.</p>
   </div>
 
 <script type="text/javascript" src="//use.typekit.net/mgk8ovf.js"></script>
